--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Microservices Lunch & Learn</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -24,8 +24,129 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+
+				<section>
+					<h1>The Netflix Stack</h1>
+					<p>or: How I Learned to Stop Worrying and Love Microservices</p>
+					<p><small>January 31st, 2018</small></p>
+				</section>
+				<section>
+					<section>
+						<h1>Introduction</h1>
+						<table class="fragment">
+							<tr>
+								<td>
+									<a href="#" class="navigate-down">
+										<img data-src="images/IMG_20171224_160649_smaller.jpg">
+									</a>
+								</td>
+								<td>
+									<a href="#" class="navigate-down">
+										<img data-src="images/IMG_20171224_160715_2_smaller.jpg">
+									</a>
+								</td>
+							</tr>
+						</table>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h1>The Netflix Stack</h1>
+						<p>or: How I Learned to Stop Worrying and Love Microservices</p>
+						<p><small>January 31st, 2018</small></p>
+					</section>
+					<section>
+						<h1>Netflix & Chill with Microservices</h1>
+						<p><small>January 31st, 2018</small></p>
+					</section>
+				</section>
+				<section>
+					<h2>Lunch & Learn Outline</h2>
+					<ul>
+						<li>‎What is a microservice?</li>
+						<li>Short Technical Demo (sorry)</li>
+						<li>Netflix: A Case Study</li>
+						<li>Or here</li>
+					</ul>
+				</section>
+				<section>
+					<section>
+						<h2>Microservices defined</h2>
+						<p><i>"Just like the real thing, only smaller..."</i> - Fred Ertl, Sr., Ertl Toys</p>
+						<p class="fragment">...probably</p>
+						<img class="fragment" data-src="images/written_directed_by.png">
+					</section>
+					<section>
+						<h2>Microservices defined</h2>
+						<p><i>"In short, the microservice architectural style is an approach to developing a single application as a suite of small services"</i> - Martin Fowler</p>
+					</section>
+					<section>
+						<h3><strike>Microservices</strike> Microservice Architecture defined</h3>
+						Monolith vs. Microservice
+						<table>
+							<tr>
+								<td class="fragment">
+									<a href="#">
+										<img data-src="images/monolith.png">
+									</a>
+								</td>
+								<td class="fragment">
+									<a href="#">
+										<img data-src="images/microservice.png">
+									</a>
+								</td>
+							</tr>
+						</table>
+					</section>
+					<section>
+						<h3>But really... what is a Microservice??</h3>
+						<ul>
+							<li class="fragment">Separate business logic functions running their own processes</li>
+							<li class="fragment">Generally communicates over HTTP (a la REST API)</li>
+							<li class="fragment">Horizontally scalable</li>
+						</ul>
+					</section>
+					<section>
+						<h3>A closer look:</h3>
+						<a href="#">
+							<img data-src="images/monolith_vs_micro.png">
+						</a>
+					</section>
+					<section>
+						<h3>Benefits</h3>
+						<ul>
+							<li class="fragment">Services are language independent (as long as they can communicate via HTTP)</li>
+							<li class="fragment">Faster iterations/smaller teams (focused on business capabilities, usually cross-functional)</li>
+							<li class="fragment">Fault isolation (issues don't bring down the entire application)</li>
+							<li class="fragment">Cloud-friendly&trade; scaling (duplicate only the services you need to duplicate, scale down when they are not needed)</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Drawbacks</h3>
+						<ul>
+							<li>Complexity
+								<p><img data-src="images/complexity.png"></p>
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<h3>Short Technical Demo (sorry)</h3>
+				</section>
+				<section>
+					<h3>Companies using Microservices</h3>
+					<ul>
+						<li>Netflix</li>
+						<li>Amazon</li>
+						<li>Uber</li>
+						<li>EBay</li>
+						<li>Groupon</li>
+						<li>Comcast(...)</li>
+						<li>Yelp</li>
+						<li>etc...</li>
+					</ul>
+				</section>
 			</div>
 		</div>
 
